--- a/Proyecto Final/HTML/index.html
+++ b/Proyecto Final/HTML/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <img src="/Proyecto Final/Image/background.jpg" alt="background" id="background">
     <h2>Iniciar Sesión</h2>
     <div class="form-group">
       <label for="email">Email:</label>
