--- a/Proyecto Final/HTML/index.html
+++ b/Proyecto Final/HTML/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="../CSS/style.css">
     <script src="../JS/node.js"></script>
-  <title>beste siden i verden</title>
+  <title>BarbaWeb</title>
   <link rel="shortcut icon" href="/Proyecto Final/Image/Noruega.png">
 </head>
 <body>
