--- a/Proyecto Final/HTML/registro.html
+++ b/Proyecto Final/HTML/registro.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Registro de Usuario</title>
+  <title>BarbaWeb</title>
   <link rel="stylesheet" href="../CSS/registro.css">
   <script src="../JS/registro.js"></script>
+  <link rel="shortcut icon" href="/Proyecto Final/Image/Noruega.png">
 
 </head>
 <body>
   <div class="container">
-    <h2>Registro de Usuario</h2>
+    <img src="/Proyecto Final/Image/background.jpg" alt="background" id="background">
+    <h2>User Registration</h2>
     <div class="form-group">
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" placeholder="Ingresa tu nombre">
