--- a/Proyecto Final/HTML/index.html
+++ b/Proyecto Final/HTML/index.html
@@ -9,19 +9,19 @@
 <body>
   <div class="container">
     <img src="/Proyecto Final/Image/background.jpg" alt="background" id="background">
-    <h2>Iniciar Sesión</h2>
+    <h2>BarbaWeb</h2>
     <div class="form-group">
       <label for="email">Email:</label>
-      <input type="email" id="email" placeholder="Ingresa tu email">
+      <input type="email" id="email" placeholder="Enter your email">
     </div>
     <div class="form-group">
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" placeholder="Ingresa tu contraseña">
+      <label for="password">Password:</label>
+      <input type="password" id="password" placeholder="Enter your password">
     </div>
     <div class="form-group">
-      <button onclick="login()">Iniciar Sesión</button>
+      <button onclick="login()">Log in</button>
     </div>
-    <p>No tienes una cuenta? <a href="registro.html">Regístrate aquí</a></p>
+    <p>You do not have an account?<a href="register.html">Sign up here</a></p>
   </div>    
 </body>
 </html>
