--- a/Proyecto Final/HTML/register.html
+++ b/Proyecto Final/HTML/register.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>BarbaWeb</title>
-  <link rel="stylesheet" href="../CSS/registers.css">
+  <link rel="stylesheet" href="../CSS/register.css">
   <script src="../JS/register.js"></script>
   <link rel="shortcut icon" href="/Proyecto Final/Image/Noruega.png">
 
@@ -24,7 +24,7 @@
       <input type="password" id="password" placeholder="Enter your password">
     </div>
     <div class="form-group">
-      <button onclick="guardarRegistro()">Register</button>
+      <button onclick="validaRegister()" onclick="guardarRegistro()" id="valid">Register</button>
     </div>
   </div>
 </body>
