--- a/Proyecto Final/HTML/interface.html
+++ b/Proyecto Final/HTML/interface.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,40 @@
     <script src="../JS/interfase.js"></script>
     <link rel="stylesheet" href="../CSS/interface.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>Bienvenido(a) Usuario</h1>
+        <p>Aquí puedes ver tus datos y contactos</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#" class="active">Inicio</a></li>
+            <li><a href="#">Datos</a></li>
+            <li><a href="#">Contactos</a></li>
+            <li><a href="#">Configuración</a></li>
+        </ul>
+    </nav>
+
+    <section class="content">
+        <div class="card">
+            <img src="profile-picture.jpg" alt="Profile Picture">
+            <h2>Tu Nombre</h2>
+            <p>Tus datos de usuario</p>
+            <a href="#" class="button">Editar Perfil</a>
+        </div>
+
+        <div class="card">
+            <h2>Contactos</h2>
+            <ul>
+                <li>Amigo 1</li>
+                <li>Amigo 2</li>
+                <li>Amigo 3</li>
+            </ul>
+        </div>
+    </section>
+
 </body>
+
 </html>
