--- a/Proyecto Final/HTML/register.html
+++ b/Proyecto Final/HTML/register.html
@@ -24,7 +24,8 @@
       <input type="password" id="password" placeholder="Enter your password">
     </div>
     <div class="form-group">
-      <button onclick="validaRegister()" onclick="guardarRegistro()" id="valid">Register</button>
+      <button  id="valid">Register</button>
+      <button type="button"  id="return">Return</button>
     </div>
   </div>
 </body>
