--- a/Proyecto Final/HTML/index.html
+++ b/Proyecto Final/HTML/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <img src="/Proyecto Final/Image/background.jpg" alt="background" id="background">
+    <form method="get" action="interface.html" enctype="multipart/form-data" id="login"></form>
     <h2>BarbaWeb</h2>
     <div class="form-group">
       <label for="email">Email:</label>
