--- a/Proyecto Final/HTML/interface.html
+++ b/Proyecto Final/HTML/interface.html
@@ -26,7 +26,7 @@
 
     <section class="content">
         <div class="card">
-            <img src="profile-picture.jpg" alt="Profile Picture">
+            <img src="../Image/profile.png  " alt="Profile Picture">
             <h2>Tu Nombre</h2>
             <p>Tus datos de usuario</p>
             <a href="#" class="button">Editar Perfil</a>
