--- a/Proyecto Final/HTML/register.html
+++ b/Proyecto Final/HTML/register.html
@@ -11,6 +11,7 @@
   <div class="container">
     <img src="/Proyecto Final/Image/background.jpg" alt="background" id="background">
     <h2>User Registration</h2>
+    <form method="get" action="index.html" enctype="multipart/form-data" id="registerLogin"></form>
     <div class="form-group">
       <label for="nombre">Name:</label>
       <input type="text" id="nombre" placeholder="Enter your name">
@@ -26,6 +27,7 @@
     <div class="form-group">
       <button  id="valid">Register</button>
       <button type="button"  id="return">Return</button>
+     
     </div>
   </div>
 </body>
