Cambios de rutas de carpetas

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../CSS/style.css">
-    <script src="../JS/node.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/node.js"></script>
   <title>BarbaWeb</title>
-  <link rel="shortcut icon" href="/Proyecto Final/Image/Noruega.png">
+  <link rel="shortcut icon" href="/Noruega.png">
 </head>
 <body>
   <div class="container">
-    <img src="/Proyecto Final/Image/background.jpg" alt="background" id="background">
+    <img src="/background.jpg" alt="background" id="background">
     <form method="get" action="interface.html" enctype="multipart/form-data" id="login"></form>
     <h2>BarbaWeb</h2>
     <div class="form-group">
