--- a/interface.html
+++ b/interface.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <script src="../JS/interfase.js"></script>
-    <link rel="stylesheet" href="../CSS/interface.css">
+    <script src="/interfase.js"></script>
+    <link rel="stylesheet" href="/interface.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
     <section class="content">
         <div class="card">
-            <img src="../Image/profile.png  " alt="Profile Picture">
+            <img src="/profile.png  " alt="Profile Picture">
             <h2>Tu Nombre</h2>
             <p>Tus datos de usuario</p>
             <a href="#" class="button">Editar Perfil</a>
