--- a/register.html
+++ b/register.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>BarbaWeb</title>
-  <link rel="stylesheet" href="/register.css">
-  <script src="/register.js"></script>
-  <link rel="shortcut icon" href="/Noruega.png">
+  <link rel="stylesheet" href="register.css">
+  <script src="register.js"></script>
+  <link rel="shortcut icon" href="Noruega.png">
 
 </head>
 <body>
   <div class="container">
-    <img src="/background.jpg" alt="background" id="background">
+    <img src="background.jpg" alt="background" id="background">
     <h2>User Registration</h2>
     <form method="get" action="index.html" enctype="multipart/form-data" id="registerLogin"></form>
     <div class="form-group">
