--- a/Proyecto Final/HTML/index.html
+++ b/Proyecto Final/HTML/index.html
@@ -12,7 +12,7 @@
     <form method="get" action="interface.html" enctype="multipart/form-data" id="login"></form>
     <h2>BarbaWeb</h2>
     <div class="form-group">
-      <label for="email">Email:</label>
+      <label for="email">Email:</label>2
       <input type="email" id="email" placeholder="Enter your email">
     </div>
     <div class="form-group">
