punto de restauracion

--- a/Proyecto Final/HTML/index.html
+++ b/Proyecto Final/HTML/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <link rel="stylesheet" href="../CSS/style.css">
-    <script src="../JS/node.js"></script>
+  <link rel="stylesheet" href="../CSS/style.css">
+  <script src="../JS/node.js"></script>
   <title>BarbaWeb</title>
   <link rel="shortcut icon" href="/Proyecto Final/Image/Noruega.png">
 </head>
+
 <body>
   <div class="container">
     <img src="/Proyecto Final/Image/background.jpg" alt="background" id="background">
     <form method="get" action="interface.html" enctype="multipart/form-data" id="login"></form>
     <h2>BarbaWeb</h2>
     <div class="form-group">
-      <label for="email">Email:</label>2
+      <label for="email">Email:</label>
       <input type="email" id="email" placeholder="Enter your email">
     </div>
     <div class="form-group">
@@ -20,9 +22,10 @@
       <input type="password" id="password" placeholder="Enter your password">
     </div>
     <div class="form-group">
-      <button onclick="login()">Log in</button>
+      <button id="login">Log in</button>
     </div>
     <p>You do not have an account?<a href="register.html">Sign up here</a></p>
-  </div>    
+  </div>
 </body>
+
 </html>
