--- a/Proyecto Final/HTML/register.html
+++ b/Proyecto Final/HTML/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>BarbaWeb</title>
   <link rel="stylesheet" href="../CSS/register.css">
@@ -7,14 +8,15 @@
   <link rel="shortcut icon" href="/Proyecto Final/Image/Noruega.png">
 
 </head>
+
 <body>
   <div class="container">
     <img src="/Proyecto Final/Image/background.jpg" alt="background" id="background">
     <h2>User Registration</h2>
     <form method="get" action="index.html" enctype="multipart/form-data" id="registerLogin"></form>
     <div class="form-group">
-      <label for="nombre">Name:</label>
-      <input type="text" id="nombre" placeholder="Enter your name">
+      <label for="name">Name:</label>
+      <input type="text" id="name" placeholder="Enter your name">
     </div>
     <div class="form-group">
       <label for="email">Email:</label>
@@ -25,10 +27,11 @@
       <input type="password" id="password" placeholder="Enter your password">
     </div>
     <div class="form-group">
-      <button  id="valid">Register</button>
-      <button type="button"  id="return">Return</button>
-     
+      <button type="submit" id="register">Register</button>
+      <button type="button" id="return">Return</button>
+
     </div>
   </div>
 </body>
+
 </html>
