--- a/Proyecto Final/HTML/index.html
+++ b/Proyecto Final/HTML/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <link rel="stylesheet" href="../CSS/style.css">
   <script src="../JS/node.js"></script>
   <title>BarbaWeb</title>
   <link rel="shortcut icon" href="/Proyecto Final/Image/Noruega.png">
 </head>
-
 <body>
   <div class="container">
     <img src="/Proyecto Final/Image/background.jpg" alt="background" id="background">
-    <form method="get" action="interface.html" enctype="multipart/form-data" id="login"></form>
+    <form method="get" action="interface.html" enctype="multipart/form-data" id="loginForm"></form>
     <h2>BarbaWeb</h2>
     <div class="form-group">
       <label for="email">Email:</label>
@@ -22,10 +20,9 @@
       <input type="password" id="password" placeholder="Enter your password">
     </div>
     <div class="form-group">
-      <button id="login">Log in</button>
+      <button id="loginButton">Log in</button>
     </div>
     <p>You do not have an account?<a href="register.html">Sign up here</a></p>
   </div>
 </body>
-
 </html>
