--- a/Proyecto Final/HTML/register.html
+++ b/Proyecto Final/HTML/register.html
@@ -4,8 +4,9 @@
 <head>
   <title>BarbaWeb</title>
   <link rel="stylesheet" href="../CSS/register.css">
-  <script src="../JS/register.js"></script>
+  <script src="../JS/registerv.js" ></script>
   <link rel="shortcut icon" href="/Proyecto Final/Image/Noruega.png">
+  <script src="../valid/validRegister.js"></script>
 
 </head>
 
